add new website from server na

--- a/xem-phim-bo/binh-minh-cua-phu-thuy/index.html
+++ b/xem-phim-bo/binh-minh-cua-phu-thuy/index.html
@@ -1185,7 +1185,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             8
+             9
             </dd>
             <br/>
            </dl>
@@ -1655,18 +1655,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/che-tac-vui" title="Chế tác vui">
+          <a class="list-top-movie-link" href="/phim-moi/nha-nghi-dang-so" title="Nhà Nghỉ Đáng Sợ">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/che-tac-vui-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nha-nghi-dang-so-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Chế tác vui
+             Nhà Nghỉ Đáng Sợ
             </span>
             <span class="list-top-movie-item-en">
-             Making Fun
+             Hotel Fear
             </span>
             <span class="list-top-movie-item-view">
              3 lượt xem
@@ -1677,18 +1677,62 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/nguoi-diep-vien-toi-yeu" title="Người Điệp Viên Tôi Yêu">
+          <a class="list-top-movie-link" href="/phim-moi/dem-lang-phan-3" title="Đêm Lặng (Phần 3)">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nguoi-diep-vien-toi-yeu-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/dem-lang-phan-3-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Người Điệp Viên Tôi Yêu
+             Đêm Lặng (Phần 3)
             </span>
             <span class="list-top-movie-item-en">
-             The Spy Who Loved Me
+             Dark (Season 3)
+            </span>
+            <span class="list-top-movie-item-view">
+             3 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/hai-ngay-mot-dem" title="Hai Ngày Một Đêm">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hai-ngay-mot-dem-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Hai Ngày Một Đêm
+            </span>
+            <span class="list-top-movie-item-en">
+             Two Days, One Night
+            </span>
+            <span class="list-top-movie-item-view">
+             0 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/nua-thanh-hung-nang-nua-thanh-mua" title="Nửa Thành Hửng Nắng Nửa Thành Mưa">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nua-thanh-hung-nang-nua-thanh-mua-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Nửa Thành Hửng Nắng Nửa Thành Mưa
+            </span>
+            <span class="list-top-movie-item-en">
+             Half Bright and Half Rain
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1699,65 +1743,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/old-yeller" title="Old Yeller">
+          <a class="list-top-movie-link" href="/phim-moi/fall-guy" title="Fall Guy">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/old-yeller-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/fall-guy-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Old Yeller
+             Fall Guy
             </span>
             <span class="list-top-movie-item-en">
-             Old Yeller
+             Fall Guy
             </span>
             <span class="list-top-movie-item-view">
-             1 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/du-toi" title="Dư Tội">
-           <span class="status">
-            HD Thuyết Minh
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/du-toi-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Dư Tội
-            </span>
-            <span class="list-top-movie-item-en">
-             Yu Sin
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/sierra-burgess-ke-that-bai" title="Sierra Burgess – Kẻ thất bại">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/sierra-burgess-ke-that-bai-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Sierra Burgess – Kẻ thất bại
-            </span>
-            <span class="list-top-movie-item-en">
-             Sierra Burgess Is a Loser
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
+             6 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
