add new website from server na

--- a/xem-phim-bo/chien-quoc-thien-nien/index.html
+++ b/xem-phim-bo/chien-quoc-thien-nien/index.html
@@ -1189,7 +1189,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             8
+             9
             </dd>
             <br/>
            </dl>
@@ -1659,21 +1659,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/avengers-trieu-dai-cua-kang" title="Avengers: Triều Đại của Kang">
+          <a class="list-top-movie-link" href="/phim-moi/vac-dau-den" title="Vạc Dầu Đen">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/avengers-trieu-dai-cua-kang-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/vac-dau-den-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Avengers: Triều Đại của Kang
+             Vạc Dầu Đen
             </span>
             <span class="list-top-movie-item-en">
-             Avengers: The Kang Dynasty
+             The Black Cauldron
             </span>
             <span class="list-top-movie-item-view">
-             4 lượt xem
+             0 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1681,21 +1681,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/tokunbo" title="Tòkunbọ̀">
+          <a class="list-top-movie-link" href="/phim-moi/tracker" title="Tracker">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tokunbò-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tracker-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Tòkunbọ̀
+             Tracker
             </span>
             <span class="list-top-movie-item-en">
-             Tòkunbọ̀
+             Tracker
             </span>
             <span class="list-top-movie-item-view">
-             5 lượt xem
+             1 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1703,18 +1703,40 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/ky-vong-lon-lao" title="Kỳ Vọng Lớn Lao">
+          <a class="list-top-movie-link" href="/phim-moi/shaft" title="Shaft">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ky-vong-lon-lao-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/shaft-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Kỳ Vọng Lớn Lao
+             Shaft
             </span>
             <span class="list-top-movie-item-en">
-             Great Inheritance
+             Shaft
+            </span>
+            <span class="list-top-movie-item-view">
+             1 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/dot-kich-phan-khu-13" title="Đột Kích Phân Khu 13">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/dot-kich-phan-khu-13-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Đột Kích Phân Khu 13
+            </span>
+            <span class="list-top-movie-item-en">
+             Assault on Precinct 13
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1725,40 +1747,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/alexa-katie-phan-4" title="Alexa &amp; Katie (Phần 4)">
+          <a class="list-top-movie-link" href="/phim-moi/dieu-con-gai-muon" title="Điều Con Gái Muốn">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/alexa-katie-phan-4-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/dieu-con-gai-muon-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Alexa &amp; Katie (Phần 4)
+             Điều Con Gái Muốn
             </span>
             <span class="list-top-movie-item-en">
-             Alexa &amp; Katie (Season 4)
-            </span>
-            <span class="list-top-movie-item-view">
-             3 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/lop-hoc-mat-xa-cho-nhung-co-vo-xinh-dep" title="Lớp Học Mát Xa Cho Những Cô Vợ Xinh Đẹp">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/lop-hoc-mat-xa-cho-nhung-co-vo-xinh-dep-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Lớp Học Mát Xa Cho Những Cô Vợ Xinh Đẹp
-            </span>
-            <span class="list-top-movie-item-en">
-             30대 한국 불륜녀들 남편보단 마사지가 좋아
+             What a Girl Wants
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
