--- a/xem-phim-bo/toi-tro-nen-manh-hon-nho-nang-cap-cac-ky-nang-cua-nong-dan/index.html
+++ b/xem-phim-bo/toi-tro-nen-manh-hon-nho-nang-cap-cac-ky-nang-cua-nong-dan/index.html
@@ -1189,7 +1189,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             8
+             9
             </dd>
             <br/>
            </dl>
@@ -1659,18 +1659,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/nha-co-nam-nang-dau" title="Nhà Có Năm Nàng Dâu">
+          <a class="list-top-movie-link" href="/phim-moi/leo-da-vinci-truy-tim-kho-bau" title="Leo Da Vinci: Truy Tìm Kho Báu">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nha-co-nam-nang-dau-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/leo-da-vinci-truy-tim-kho-bau-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Nhà Có Năm Nàng Dâu
+             Leo Da Vinci: Truy Tìm Kho Báu
             </span>
             <span class="list-top-movie-item-en">
-             5-toubun no Hanayome ∬, The Quintessential Quintuplets: Season 2
+             Leo Da Vinci: Mission Mona Lisa
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1681,40 +1681,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/toi-doc-than-dua-vao-thuc-luc" title="Tôi Độc Thân Dựa Vào Thực Lực">
-           <span class="status">
-            HD Thuyết Minh
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/toi-doc-than-dua-vao-thuc-luc-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Tôi Độc Thân Dựa Vào Thực Lực
-            </span>
-            <span class="list-top-movie-item-en">
-             Professional Single
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/hay-goi-cho-saul-phan-2" title="Hãy gọi cho Saul (Phần 2)">
+          <a class="list-top-movie-link" href="/phim-moi/thien-tinh-chi-lo" title="Thiên Tỉnh Chi Lộ">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hay-goi-cho-saul-phan-2-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/thien-tinh-chi-lo-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Hãy gọi cho Saul (Phần 2)
+             Thiên Tỉnh Chi Lộ
             </span>
             <span class="list-top-movie-item-en">
-             Better Call Saul (Season 2)
+             Legend of Awakening
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
@@ -1725,18 +1703,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/bo-ba-trom-cap-phan-2" title="Bộ ba trộm cắp (Phần 2)">
+          <a class="list-top-movie-link" href="/phim-moi/cong-ly-cua-spenser" title="Công lý của Spenser">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/bo-ba-trom-cap-phan-2-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cong-ly-cua-spenser-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Bộ ba trộm cắp (Phần 2)
+             Công lý của Spenser
             </span>
             <span class="list-top-movie-item-en">
-             Trailer Park Boys (Season 2)
+             Spenser Confidential
             </span>
             <span class="list-top-movie-item-view">
              3 lượt xem
@@ -1747,21 +1725,43 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/match-point" title="Match Point">
+          <a class="list-top-movie-link" href="/phim-moi/chu-chuot-sieu-quay" title="Chú Chuột Siêu Quậy">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/match-point-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/chu-chuot-sieu-quay-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Match Point
+             Chú Chuột Siêu Quậy
             </span>
             <span class="list-top-movie-item-en">
-             Match Point
+             Stuart Little
             </span>
             <span class="list-top-movie-item-view">
              3 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/phong-toa" title="Phong Tỏa">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/phong-toa-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Phong Tỏa
+            </span>
+            <span class="list-top-movie-item-en">
+             The Lockdown
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
